<resources>
    <string name="app_name">Veo Negocio</string>
    <string name="aceptar">Aceptar</string>
    <string name="contrase_a">contraseña</string>
    <string name="su_contrase_a">Su Contraseña</string>
    <string name="nombre_usuario">nombre usuario</string>
    <string name="su_nombre_de_usuario">Su Nombre de Usuario</string>
    <string name="title_activity_presentacion">Presentación</string>
    <string name="lanzar_presentacion">lanzar presentacion</string>
    <string name="lanzar_sin_conexion">Sin Conexion</string>
    <string name="title_activity_sin_conexion">Sin Conexión</string>
    <string name="title_activity_registro">Registro</string>
    <string name="lanzar_registro">REGISTRAR</string>
    <string name="al_continuar_aceptas_nuestros_t_rminos_de_servicio_y">Al continuar, <u>aceptas nuestros Términos de servicio y</u></string>
    <string name="po_tica_de_privacidad"><u>Poítica de privacidad</u></string>
    <string name="cancelar">CANCELAR</string>
    <string name="mensajeToastFaltaDato">Falta dato nombre</string>

    <string name="mensajeToastMail">Direccion mail erronea</string>
    <string name="listado_de_clientes">LISTADO DE CLIENTES</string>
    <string name="nombre_registro">Nombre:</string>
    <string name="hint_su_nombre_registro">su nombre</string>
    <string name="apellidos_registro">Apellidos:</string>
    <string name="hint_sus_apellidos_registro">sus apellidos</string>
    <string name="direcci_n_correo_electr_nico_registro">Dirección Correo Electrónico:</string>
    <string name="hint_su_direcci_n_de_correo_electr_nico_registro">su dirección de correo electrónico</string>
    <string name="password_registro">Contraseña:</string>
    <string name="hint_contrase_a_registro">contraseña</string>
    <string name="faltaDatoApellidos">Falta dato apellidos</string>
    <string name="faltaDatoPassword">Falta dato contraseña</string>
    <string name="patronPassword">^[_A-Za-z0-9-\\\\+]+(\\\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\\\.[A-Za-z0-9]+)*(\\\\.[A-Za-z]{2,})$</string>
    <string name="action_settings">settings</string>
    <string name="has_olvidado_los_datos_de_tu_cuenta"><u>¿Has olvidado los datos de tu cuenta?</u></string>
    <string name="registrarse_es_gratis">REGISTRARSE, es gratis</string>

</resources>
