<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_nombre_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_registro"
        android:textColor="#04285C"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edit_nombre_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_su_nombre_registro"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_apellidos_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellidos_registro"
        android:textColor="#04285C"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edit_apellidos_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_sus_apellidos_registro"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_email_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/direcci_n_correo_electr_nico_registro"
        android:textColor="#04285C"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edit_email_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_su_direcci_n_de_correo_electr_nico_registro"
        android:inputType="text" />

    <TextView
        android:id="@+id/text_password_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_registro"
        android:textColor="#04285C"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/edit_password_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contrase_a_registro"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/boton_aceptar_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:background="@drawable/boton_aceptar_registro"
        android:onClick="aceptarRegistro"
        android:text="@string/aceptar" />

</LinearLayout>